--- a/app/src/main/res/layout/fragment_munchkin.xml
+++ b/app/src/main/res/layout/fragment_munchkin.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".Munchkin">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <SeekBar
+        android:id="@+id/munchkinLevelBar"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="217dp"
+        android:layout_height="23dp"
+        android:max="9"
+        android:progress="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.179" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/munchkinLevel"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        android:textAlignment="center"
+        android:textSize="@android:dimen/app_icon_size"
+        android:text="@string/munchkin_level"
+        app:layout_constraintBottom_toTopOf="@+id/munchkinLevelBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/m_level_name"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/munchkinLevel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
+</androidx.constraintlayout.widget.ConstraintLayout>
