--- a/app/src/main/res/layout/fragment_scrabble.xml
+++ b/app/src/main/res/layout/fragment_scrabble.xml
@@ -1,38 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".Scrabble">
 
-
-    <TableLayout
+    <Button
+        android:id="@+id/add_button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="68dp"
+        android:text="Add score"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
 
-            <TextView
-                android:text=""
-                android:layout_weight="1" android:background="#E2E2E2"
-                android:textColor="#000000"
-                android:padding="10dip" android:gravity="center"/>
-
-            <TextView
-                android:text=""
-                android:layout_weight="1" android:background="#E2E2E2"
-                android:textColor="#000000"
-                android:padding="10dip" android:gravity="center"/>
-
-        </TableRow>
-    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
