--- a/app/src/main/res/layout/fragment_scrabble.xml
+++ b/app/src/main/res/layout/fragment_scrabble.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    tools:context=".Scrabble">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:stretchColumns="0,1,2"
+    android:gravity="center">
 
-    <Button
+        <Button
         android:id="@+id/add_button"
         android:layout_width="match_parent"
         android:layout_height="68dp"
