--- a/app/src/main/res/layout/fragment_scrabble.xml
+++ b/app/src/main/res/layout/fragment_scrabble.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:stretchColumns="0,1,2"
-    android:gravity="center">
+    android:background="@color/colorBackground"
+    android:gravity="center"
+    android:stretchColumns="0,1,2">
 
         <Button
-        android:id="@+id/add_button"
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:text="Add score"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:id="@+id/add_button"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:text="@string/s_add_score"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/scoreText"
+            android:layout_width="378dp"
+            android:layout_height="592dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/add_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scrollbars = "vertical"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
