--- a/app/src/main/res/layout/fragment_high_score.xml
+++ b/app/src/main/res/layout/fragment_high_score.xml
@@ -32,21 +32,21 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/hsname"
+                android:id="@+id/tusername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/hs_name" />
 
             <TextView
-                android:id="@+id/hsgame"
+                android:id="@+id/tgame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/hs_game" />
 
             <TextView
-                android:id="@+id/hsscore"
+                android:id="@+id/tscore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -59,7 +59,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editText15"
+                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -67,7 +67,7 @@
                 android:inputType="textPersonName"/>
 
             <EditText
-                android:id="@+id/editText7"
+                android:id="@+id/game"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -75,12 +75,12 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number" />
+                android:inputType="textPersonName" />
 
         </LinearLayout>
 
@@ -90,7 +90,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/inp_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -118,7 +118,7 @@
                 android:text="@string/hs_name" />
 
             <EditText
-                android:id="@+id/editText16"
+                android:id="@+id/get_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -126,7 +126,7 @@
                 android:inputType="textPersonName" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/out_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
