--- a/app/src/main/res/layout/fragment_scrabble.xml
+++ b/app/src/main/res/layout/fragment_scrabble.xml
@@ -19,17 +19,17 @@
 
         <TextView
             android:id="@+id/scoreText"
-            android:layout_width="378dp"
-            android:layout_height="592dp"
+            android:layout_width="374dp"
+            android:layout_height="546dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="32dp"
+            android:scrollbars="vertical"
             app:layout_constraintBottom_toTopOf="@+id/add_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:scrollbars = "vertical"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
